fix tippy overflow

--- a/applications/fishing-map/src/features/search/Search.module.css
+++ b/applications/fishing-map/src/features/search/Search.module.css
@@ -20,7 +20,7 @@
 }
 
 .expandedArrow {
-  left: 0 !important;
+  left: -5px !important;
 }
 
 .expandedArrow::before {
